// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theGameOfLifeReducer Dispatches the correct action and payload (startZooming) 1`] = `
Array [
  Object {
    "type": "START_ZOOMING",
    "zoom": 5,
  },
]
`;

exports[`theGameOfLifeReducer Dispatches the correct action and payload (updateArrayOfCells) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 2,
        "b": 7,
      },
    ],
    "type": "UPDATE_ARRAY_OF_CELLS",
  },
]
`;

exports[`theGameOfLifeReducer Dispatches the correct action and payload (updateMapInteractionCSS) 1`] = `
Array [
  Object {
    "type": "UPDATE_MAP_INTERACTION_CSS",
    "zoom": 2,
  },
]
`;

exports[`theGameOfLifeReducer Dispatches the correct action and payload (updateZoom) 1`] = `
Array [
  Object {
    "type": "UPDATE_ZOOM",
    "val": 3,
  },
]
`;
